spec/fail/undefined_func.ulg
fn foo(): Number
   compute_number() # !> Can't find function 'compute_number'
end